Media elements not in a page shouldn't load. https://bugs.webkit.org/show_bug.cgi?id=143720

Reviewed by Jer Noble.

No new tests (Theoretical problem noticed in code review).

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::loadResource): Make sure the frame is in a page.


Canonical link: https://commits.webkit.org/161758@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@182810 268f45cc-cd09-0410-ab3c-d52691b4dbfc